Fixing small alignment issues

--- a/App/css/default.css
+++ b/App/css/default.css
@@ -381,11 +381,12 @@ signedIn-articleList .win-itemcontainer .win-focusedoutline {
     padding-left: 9px;
     padding-top: 2px;
     margin: 0;
+    margin-top: -1px;
     overflow: hidden;
-    max-height: 50px;
+    max-height: 48px;
     font-size: 14px;
     font-weight: bold !important;
-    line-height: 26px;
+    line-height: 25px;
 }
 
 .article-title-text {
